--- a/appsrc/AppFVC/AppFVC/Views/PreConditionsRiskGroupPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/PreConditionsRiskGroupPage.xaml
@@ -3,14 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              x:Class="AppFVC.Views.PreConditionsRiskGroupPage"
+             ios:Page.UseSafeArea="True"
              BackgroundColor="#6FCF97">
 
 
 
     <ScrollView>
         <StackLayout Padding="0,0,0,30">
-            <Frame CornerRadius="8" HasShadow="False" VerticalOptions="Start" x:Name="FrameRiskGroup" Margin="45,70,45,30.7">
+            <Frame CornerRadius="8" HasShadow="False" VerticalOptions="Start" x:Name="FrameRiskGroup" Margin="45,27,45,30.7">
                 <Grid VerticalOptions="Start" HorizontalOptions="FillAndExpand" x:Name="GridSms" Padding="1,0,1,5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
