--- a/appsrc/AppFVC/AppFVC/Views/StatusIsolationPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusIsolationPage.xaml
@@ -41,7 +41,7 @@
                             Command="{Binding NavigateTerms}"
                             ></TapGestureRecognizer>
                 </Frame.GestureRecognizers>
-                <StackLayout Orientation="Horizontal" HorizontalOptions="Start" Spacing="15">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="15">
 
                     <Image BackgroundColor="#EE7000" Source="icon_doctor.png" VerticalOptions="Center"></Image>
                     <Label Text="Preciso de orientação médica" Style="{StaticResource BoldFont}" TextColor="White" BackgroundColor="#EE7000" FontAttributes="Bold" HorizontalOptions="Center"  VerticalOptions="FillAndExpand" FontSize="16" VerticalTextAlignment="Center"></Label>
