--- a/appsrc/AppFVC/AppFVC/Views/StatusQuarantinePage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusQuarantinePage.xaml
@@ -40,7 +40,7 @@
                             Command="{Binding NavigateTerms}"
                             ></TapGestureRecognizer>
                 </Frame.GestureRecognizers>
-                <StackLayout Orientation="Horizontal" HorizontalOptions="Start" Spacing="15">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="15">
 
                     <Image BackgroundColor="#CA2D2D" Source="icon_doctor.png" VerticalOptions="Center"></Image>
                     <Label Text="Preciso de orientação médica" Style="{StaticResource BoldFont}" TextColor="White" BackgroundColor="#CA2D2D" FontAttributes="Bold" HorizontalOptions="Center"  VerticalOptions="FillAndExpand" FontSize="16" VerticalTextAlignment="Center"></Label>
