--- a/appsrc/AppFVC/AppFVC/Views/PreConditionsRiskGroupPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/PreConditionsRiskGroupPage.xaml
@@ -35,8 +35,18 @@
                     <Button Grid.Row="1" Grid.Column="1" Margin="0,0,0,20" Text="Não" WidthRequest="100" HeightRequest="43" x:Name="lbNao" CornerRadius="8" FontSize="16" TextColor="{Binding NaoTextColor}" BackgroundColor="{Binding NaoColor}" Command="{Binding NaoCommand}" BorderColor="#219653" BorderWidth="4" HorizontalOptions="Center"/>
 
 
-                    <Label Grid.Row="2" Grid.ColumnSpan="2" Margin="0,0,0,140" Text="Quem faz parte do grupo de risco?" Style="{StaticResource BoldFont}" HorizontalTextAlignment="Center" FontSize="12" TextColor="#219653" TextDecorations="Underline" VerticalOptions="StartAndExpand" />
+                    <Label Grid.Row="2" Grid.ColumnSpan="2" Margin="0,0,0,140" x:Name="lbRiskGroup" Text="Quem faz parte do grupo de risco?" Style="{StaticResource BoldFont}" HorizontalTextAlignment="Center" FontSize="12" TextColor="#219653" TextDecorations="Underline" VerticalOptions="StartAndExpand" >
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer
+                         BindingContext="{Binding Source={x:Reference FrameRiskGroup}, Path=BindingContext}"
+                         CommandParameter="{Binding Source={x:Reference lbRiskGroup}, Path=BindingContext}"
+                         Command="{Binding NavegarRiskGroup}">
 
+                            </TapGestureRecognizer>
+                        </Label.GestureRecognizers>
+                    </Label>
+
+                    
                     <Label Grid.Row="3" Grid.ColumnSpan="2" Margin="10,0,10,5" Text="{Binding Erro}" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" TextColor="#EB5757" FontSize="11"></Label>
 
                     <Button Grid.Row="4" Grid.ColumnSpan="2" Text="Próximo" Command="{Binding NavegarNext}" Style="{StaticResource ButtonNextStyle}" VerticalOptions="Start" HorizontalOptions="CenterAndExpand"></Button>
